# ircc-xfa-extractor

./: .gitignore  GITHUB_SETUP.md  LICENSE  QUICK_START.md  README.md  USAGE.md  pyproject.toml
examples/: sample_output.json
ircc_xfa/: __init__.py  cli.py  extractor.py
